# foundry-grant-eo-validation-demo

./: .env.example  .gitignore  CHANGELOG.md  README.md  azure.yaml  contributing.md  pyproject.toml  requirements.txt  start.sh  stop.sh
agents/: __init__.py  compliance_agent.py  compliance_agent_foundry.py  compliance_validator_agent.py  document_ingestion_agent.py  email_trigger_agent.py  orchestrator.py  risk_scoring_agent.py  sequential_workflow_orchestrator.py  sequential_workflow_orchestrator_foundry.py  summarization_agent.py  summarization_agent_foundry.py
app/: README.md  streamlit_app.py  streamlit_app_new.py
backend/: .gitignore  README.md  main.py  test_server.py
config/: search_index.json
docs/: Architecture.md  ComplianceWorkflowDiagram.md  CostEstimation.md  Deployment.md  DeploymentChecklist.md  EvaluationMethodology.md  ManagedIdentitySetup.md  QuickDeploy.md  ReactQuickstart.md  ScoringSystem.md  SequentialWorkflowOrchestrator.md  UserGuide.md  pdfGuide.md  pdfQuickReference.md  sharepointIntegration.md  sharepointQuickstart.md  uploadPdfsToAzureSearch.md
examples/: document_ingestion_with_managed_identity.py
frontend/: README.md  index.html  package-lock.json  package.json
infra/: .gitignore  API_VERSIONS.md  README.md  UPDATE_SUMMARY.md  main.bicep  main.json  main.parameters.json
scripts/: deploy_webhook_function.sh  generate_architecture_diagram.py  index_knowledge_base.py  setup_sharepoint_webhooks.py  sharepoint_integration.py  verify_azure_search.py
tests/: run_all_agent_tests.py  test_azure_search.py  test_compliance_agent.py  test_compliance_agent_citations.py  test_document.txt  (+15 more)
(+48 files in other folders)
